NODE-2449 Run ride on any environment - cache weigher