@@ -45,7 +45,8 @@ inConfig(Universal)(
       "-J-XX:+ParallelRefProcEnabled",
       "-J-XX:+UseStringDeduplication",
       // JVM default charset for proper and deterministic getBytes behaviour
-      "-J-Dfile.encoding=UTF-8"
+      "-J-Dfile.encoding=UTF-8",
+      "--add-opens=java.base/java.lang=ALL-UNNAMED"
     )
   )
 )
